--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,2 +1,6 @@
-﻿<!-- main app container -->
-<div></div>
+﻿<div>
+    <!-- <input [(ngModel)]="name"><br/>
+    <button (click)="login()">Submit</button> -->
+    <!-- <phone-verification></phone-verification> -->
+    <router-outlet></router-outlet>
+ </div>
